...
            inactiveIcon: Icons.explore_outlined,
            label: 'Explore',
          ),
          AppBottomNavItem(
            activeIcon: Icons.search,
            inactiveIcon: Icons.search,
            label: 'Search',
          ),
          AppBottomNavItem(
            activeIcon: Icons.airplane_ticket,
            inactiveIcon: Icons.airplane_ticket_outlined,
            label: 'Trips',
          ),
          AppBottomNavItem(
            activeIcon: Icons.headset_mic,
            inactiveIcon: Icons.headset_mic_outlined,
            label: 'Concierge',
          ),
...
